--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.1"
+    "reflect-metadata": "^0.2.2",
+    "tailwind-merge": "^3.4.1",
+    "tsyringe": "^4.10.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
