--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "reflect-metadata": "^0.2.2",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.1",
     "tsyringe": "^4.10.0",
     "zod": "^4.3.6"
@@ -32,6 +33,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "prettier": "3.8.1",
     "shadcn": "^3.8.5",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
